[MNG-8306] Fix wrong order when merging xml nodes